2008-01-15  Martin Lambers <marlam@marlam.de>

	* cvl/cvl/cvl_hdr.h, cvl/cvl_hdr.c, cvl/Makefile.am,
	cvl/glsl/hdr/tonemap_ashikhmin02_step1.glsl,
	cvl/glsl/hdr/tonemap_ashikhmin02_step2.glsl: Add
	cvl_tonemap_ashikhmin02().

2008-01-14  Martin Lambers <marlam@marlam.de>

	* cvl/cvl/cvl_hdr.h, cvl/cvl_hdr.c, cvl/Makefile.am,
	cvl/glsl/hdr/tonemap_reinhard02_step1.glsl,
	cvl/glsl/hdr/tonemap_reinhard02_step2.glsl: Add
	cvl_tonemap_reinhard02().
	* cvl/glsl/hdr/tonemap_reinhard02_step2.glsl: Fix the prescaling step.
	* cvl/cvl/cvl_hdr.h, cvl/cvl_hdr.c, cvtool/cmd_tonemap.c: Change
	interfaces to allow faster use in interactive applications.

2008-01-13  Martin Lambers <marlam@marlam.de>

	* cvl/cvl/cvl_hdr.h, cvl/cvl_hdr.c, cvl/Makefile.am,
	cvl/glsl/hdr/tonemap_reinhard05.glsl, cvl/glsl/hdr/log_avg_lum.glsl,
	cvl/glsl/hdr/tonemap_tumblin99.glsl: Add cvl_tonemap_reinhard05().

2008-01-12  Martin Lambers <marlam@marlam.de>

	* cvl/cvl/cvl_hdr.h, cvl/cvl_hdr.c, cvl/Makefile.am, 
	tests/cmd_tonemap.sh, doc/cvtool.texi, cvtool/cmd_tonemap.c, NEWS:
	Rename tumblinrushmeier99 to tumblin99 for consistency.

2008-01-11  Martin Lambers <marlam@marlam.de>

	* cvl/cvl_hdr.c: Fix documentation of cvl_tonemap_schlick94().
	* doc/cvl.texi, doc/cvtool.1, doc/doxy/doxyfile: Bump version to
	0.2.3.

2008-01-10  Martin Lambers <marlam@marlam.de>

	* NEWS: Update.
	* cvtool/cvtool.c: Update copyright year in --version output.

2008-01-09  Martin Lambers <marlam@marlam.de>

	* cvl/glsl/color/pseudo_color.glsl: Fix pseudo color computation: Use
	the hue values in the opposite direction.
	* cvl/cvl_hdr.c, cvl/cvl/cvl_hdr.h,
	cvl/glsl/hdr/tonemap_tumblinrushmeier99_step1.glsl,
	cvl/glsl/hdr/tonemap_tumblinrushmeier99_step2.glsl, cvl/Makefile.am: 
	Add cvl_tonemap_tumblinrushmeier99().
	* cvtool/cmd_tonemap.c, tests/cmd_tonemap.sh, doc/cvtool.texi: Add the
	tumblinrushmeier99 method to the tonemap command.
	* cvl/cvl_hdr.c, cvl/cvl/cvl_hdr.h,