@@ -1,3 +1,9 @@
+2008-01-16  Martin Lambers <marlam@marlam.de>
+
+	* cvl/cvl_hdr.c, cvl/glsl/hdr/tonemap_ashikhmin02_step1.glsl,
+	cvl/glsl/hdr/tonemap_ashikhmin02_step2.glsl: Fix
+	cvl_tonemap_ashikhmin02().
+
 2008-01-15  Martin Lambers <marlam@marlam.de>
 
 	* cvl/cvl/cvl_hdr.h, cvl/cvl_hdr.c, cvl/Makefile.am,
